--- a/dom/bindings/Bindings.conf
+++ b/dom/bindings/Bindings.conf
@@ -216,6 +216,7 @@ DOMInterfaces = {
 },
 
 'Crypto' : {
+  'implicitJSContext': [ 'generateCRMFRequest', 'signText' ],
   'headerFile': 'Crypto.h'
 },
 
